# EnhancedClearCoreLibrary

./: MODIFICATIONS.md  NEW_FILES.md  README.md  build.ps1
.cursor/plans/: newgcontrol_product_plan_ba69555c.plan.md
ClearCNC_Controller/: README.md  XY_Test_Pattern.gcode
ClearCNC_Controller/ClearCoreFirmware/: ClearCNC_Firmware.atsln  ClearCNC_Firmware.cpp  ClearCNC_Firmware.cppproj
ClearCNC_Controller/QtController/: CMakeLists.txt
ClearCNC_Controller/QtController/resources/: app_resources.qrc
ClearCNC_Controller/QtController/src/: GCodeProgramKinematics.cpp  GCodeProgramKinematics.h  MainWindow.cpp  MainWindow.h  PositionView3D.cpp  PositionView3D.h  main.cpp
ClearCNC_Controller/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
ClearCNC_Controller/TestGCodes/: FusionArcs.gcode  LookAhead.gcode  MotionTest_Comprehensive.gcode  Skunk.nc  Skunk_x2.nc  SpindleControl.gcode  Square.gcode  XY_3x3_RoundedRect_Positive.gcode  XY_Circle_Arc_Positive_Quad.gcode  XY_Circle_Arc_Positive_TwoHalfs.gcode  XY_Circle_Test_Positive_Quad.gcode  XY_Test_Pattern.gcode  random_hour_x_inch.gcode  scale_gcode.py  (+1 more)
ClearHPGL/: CMakeLists.txt  CMakePresets.json  build.ps1
GRBLCompatibleExample/: GRBLCompatible.atsln  GRBLCompatible.cpp  GRBLCompatible.cppproj  README.md  test_square.gcode  test_square_10in_r1.gcode
LwIP/: LwIP.cppproj
MotionStreamingExample/: MotionStreaming.atsln  MotionStreaming.cpp  MotionStreaming.cppproj  README.md  STREAMING_GUIDE.md
NewGControl/: CMakeLists.txt  README.md
libClearCore/: ClearCore.cppproj
(+207 files in other folders)
